kubernetes/services/gotify.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: gotify

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  namespace: default
spec:
  tls:
    - hosts:
        - gotify.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: gotify.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: default
  labels:
    app: gotify
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: app
          image: ghcr.io/gotify/server
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          hostPath:
            path: /storage/gotify/data
